--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "named-pipe",
-  "version": "1.0.0",
+  "name": "@atroche/named-pipe",
+  "version": "1.0.1",
   "description": "Linux named pipes in NodeJS (mkfifo)",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sepehr-laal/node-named-pipe.git"
+    "url": "git+https://github.com/atroche/node-named-pipe.git"
   },
   "keywords": [
     "mkfifo",
@@ -17,12 +17,12 @@
     "fifo"
   ],
   "os" : [ "!win32" ],
-  "author": "Sepehr Laal",
+  "author": "Alistair Roche (forked from Sepehr Laal)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/sepehr-laal/node-named-pipe/issues"
+    "url": "https://github.com/atroche/node-named-pipe/issues"
   },
-  "homepage": "https://github.com/sepehr-laal/node-named-pipe#readme",
+  "homepage": "https://github.com/atroche/node-named-pipe#readme",
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
