--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "ipc",
     "fifo"
   ],
-  "os" : [ "!win32" ],
+  "os": [
+    "!win32"
+  ],
   "author": "Alistair Roche (forked from Sepehr Laal)",
   "license": "MIT",
   "bugs": {
@@ -26,7 +28,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^5.0.4",
-    "nyc": "^11.4.1"
+    "mocha": "^8.1.1",
+    "nyc": "^15.1.0"
   }
 }
